<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:src="@drawable/ic_action_report"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:text="@string/error_loading"
            android:textColor="@color/body_text_2"/>


        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:gravity="center"
            android:text="@string/check_connection"
            android:textColor="@color/body_text_3"/>


        <TextView
            android:layout_marginTop="@dimen/horizontal_margin"
            android:id="@+id/retry_button"
            style="@style/Theme.World.ButtonFilled"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/body_text_2"/>

    </LinearLayout>

</RelativeLayout>